--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   pointer-events: none;
 }
 .sidemenu{
-  width : 260px;
+  width : 20%;
   border: solid 1px rgb(255, 255, 255);
   background-color: #2c2e2e;
   padding : 10px
